--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -11,10 +11,12 @@
   {% include services.html %}
   {% include callout.html %}
   {% include portfolio.html %}
+  {% include about-1.html %}
   {% include call-to-action.html %}
+  {% include about-2.html %}
   {% include footer.html %}
   {% include scripts.html %}
-  
+
 </body>
 
 </html>
