Changed .html file names to match sections

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,5 +1,5 @@
 <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-<section id="services" class="services bg-primary">
+<section id="experience" class="experience bg-primary">
   <div class="container">
     <div class="row text-center">
       <div class="col-lg-10 col-lg-offset-1">
@@ -13,9 +13,9 @@
               <i class="fa fa-flask fa-stack-1x text-primary"></i>
             </span>
               <h4>
-                <strong>Current Projects</strong>
+                <strong>Curriculum Vitae</strong>
               </h4>
-              <p>Overview of my current researh projects.</p>
+              <p>Click here for a copy of my CV.</p>
               <a class="btn btn-light" href="https://wyattsp.github.io/AboutMePage/research/" role="button">Learn More</a>
             </div>
           </div>
@@ -41,7 +41,7 @@
               <h4>
                 <strong>Teaching</strong>
               </h4>
-              <p>Take a look at my CV.</p>
+              <p>Take a look at my teaching experience.</p>
               <a href="https://wyattsp.github.io/AboutMePage/cv/" role="button" class="btn btn-light">Learn More</a>
             </div>
           </div>
@@ -54,7 +54,7 @@
               <h4>
                 <strong>Outside Academia</strong>
               </h4>
-              <p>Industry driven data solutions.    </p>
+              <p>Industry driven data solutions.</p>
               <a href="https://wyattsp.github.io/AboutMePage/outside/" role="button" class="btn btn-light">Learn More</a>
             </div>
           </div>
