--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,19 +6,19 @@
       <a href="#top"  onclick = $("#menu-close").click(); >Wyatt Petryshen</a>
     </li>
     <li>
-      <a href="https://wyattsp.github.io/AboutMePage/research/" onclick = $("#menu-close").click(); >Research</a>
+      <a href="#experience" onclick = $("#menu-close").click(); >Experience</a>
     </li>
     <li>
-      <a href="https://wyattsp.github.io/AboutMePage/philosophy/" onclick = $("#menu-close").click(); >Philosophy</a>
+      <a href="#research" onclick = $("#menu-close").click(); >Research</a>
     </li>
     <li>
-      <a href="https://wyattsp.github.io/AboutMePage/cv/" onclick = $("#menu-close").click(); >CV</a>
+      <a href="#about-ma" onclick = $("#menu-close").click(); >About Me</a>
     </li>
     <li>
-      <a href="https://wyattsp.github.io/AboutMePage/aboutme/" onclick = $("#menu-close").click(); >About Me</a>
+      <a href="#people" onclick = $("#menu-close").click(); >People</a>
     </li>
     <li>
-      <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
+      <a href="#footer" onclick = $("#menu-close").click(); >Contact</a>
     </li>
   </ul>
 </nav>
