--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,12 +8,14 @@
   {% include navigation.html %}
   {% include header.html %}
   {% include about.html %}
-  {% include services.html %}
-  {% include callout.html %}
-  {% include portfolio.html %}
-  {% include about-1.html %}
-  {% include call-to-action.html %}
-  {% include about-2.html %}
+  {% include experience.html %}
+  {% include banner-1.html %}
+  {% include research.html %}
+  {% include researchImg.html %}
+  {% include banner-2.html %}
+  {% include about-me.html %}
+  {% include MeImg.html %}
+  {% include people.html %}
   {% include footer.html %}
   {% include scripts.html %}
 
