--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -1,4 +1,4 @@
-<section id="about-2" class="about-2">
+<section id="about-me" class="about-me">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
