--- a/_includes/people.html
+++ b/_includes/people.html
@@ -1,4 +1,4 @@
-<aside class="call-to-action bg-primary">
+<aside class="people bg-primary">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
