--- a/_includes/research.html
+++ b/_includes/research.html
@@ -1,4 +1,4 @@
-<section id="about-1" class="about-1">
+<section id="research" class="research">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
