--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,7 +12,7 @@
       <a href="#research" onclick = $("#menu-close").click(); >Research</a>
     </li>
     <li>
-      <a href="#about-ma" onclick = $("#menu-close").click(); >About Me</a>
+      <a href="#about-me" onclick = $("#menu-close").click(); >About Me</a>
     </li>
     <li>
       <a href="#people" onclick = $("#menu-close").click(); >People</a>
