--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,10 +9,10 @@
   {% include header.html %}
   {% include about.html %}
   {% include experience.html %}
-  {% include banner-1.html %}
+  {% include callout.html %}
   {% include research.html %}
   {% include researchImg.html %}
-  {% include banner-2.html %}
+  {% include callout-1.html %}
   {% include about-me.html %}
   {% include MeImg.html %}
   {% include people.html %}
