--- a/_includes/researchImg.html
+++ b/_includes/researchImg.html
@@ -7,28 +7,28 @@
         <div class="row">
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a class="portfolio-item" href="https://wyattsp.github.io/AboutMePage/research/" role="button">
+              <a class="portfolio-item" href="#" role="button">
                 <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="https://wyattsp.github.io/AboutMePage/projectB/">
+              <a href="#">
                 <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="https://wyattsp.github.io/AboutMePage/projectC/">
+              <a href="#">
                 <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="https://wyattsp.github.io/AboutMePage/projectD/">
+              <a href="#">
                 <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
               </a>
             </div>
