--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -185,7 +185,21 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/IMG_1769.jpg) no-repeat center center scroll;
+    background: url(../img/callout.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+/* Callout-1 */
+
+.callout-1 {
+    display: table;
+    width: 100%;
+    height: 400px;
+    color: #fff;
+    background: url(../img/callout-1IMG.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -195,7 +209,7 @@ hr.small {
 /* Portfolio */
 
 .portfolio {
-    padding: 50px 0;
+    padding: 80px 0;
 }
 
 .portfolio-item {
