--- a/_includes/people.html
+++ b/_includes/people.html
@@ -1,9 +1,12 @@
 <aside class="people bg-primary">
+  <section id="people" class="people bg-primary">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h3>Check out some of my colleagues work!</h3>
         <a href="#" class="btn btn-lg btn-dark">People</a>
+        <br/><br/>
+        <br/><br/>
       </div>
     </div>
   </div>
