Attempt to fix image sizing

--- a/_includes/MeImg.html
+++ b/_includes/MeImg.html
@@ -8,28 +8,28 @@
           <div class="col-md-6">
             <div class="portfolio-item">
               <a class="portfolio-item" href="#" role="button">
-                <img class="img-portfolio img-responsive" src="img/me-1.jpg">
+                <img class="img-portfolio img-responsive" src="img/me-1.jpg" height="225">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#">
-                <img class="img-portfolio img-responsive" src="img/me-2.jpg">
+                <img class="img-portfolio img-responsive" src="img/me-2.jpg" height="225">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#">
-                <img class="img-portfolio img-responsive" src="img/me-3.jpg">
+                <img class="img-portfolio img-responsive" src="img/me-3.jpg" height="225">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#">
-                <img class="img-portfolio img-responsive" src="img/me-4.jpg">
+                <img class="img-portfolio img-responsive" src="img/me-4.jpg" height="225">
               </a>
             </div>
           </div>
