Final format changes

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -41,7 +41,7 @@
               <h4>
                 <strong>Teaching</strong>
               </h4>
-              <p>Take a look at my teaching experience.</p>
+              <p>Here's what I've taught.</p>
               <a href="https://wyattsp.github.io/AboutMePage/cv/" role="button" class="btn btn-light">Learn More</a>
             </div>
           </div>
