--- a/_includes/research.html
+++ b/_includes/research.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>Research Overview</h2>
-        <p class="lead">Continue scrolling for more information or check out my <a target="_blank" href="https://www.researchgate.net/profile/Wyatt_Petryshen">Research Gate</a>.</p>
+        <p class="lead">My current research is focused on explaining patterns of diversity in Permian conodont populations, with my broader interests being focused on how environmental perturbations impact diversity, the effect of developmental plasticity on population dynamics, and larger scale patterns in global marine ecosystems.</p>
       </div>
     </div>
     <!-- /.row -->
