Attempt to add captions to portfolio items

--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>About Me</h2>
-        <p class="lead">I'm Wyatt Petryshen. I grew up in Calgary, Alberta but spent many summers in the Kootenays. My passions include science, learning, mountain biking, climbing, and skiing.</p>
+        <p class="lead">I'm Wyatt Petryshen. I grew up in Calgary, Alberta but spent many summers in the Kootenays. My passions include science, programming, mountain biking, climbing, and skiing.</p>
       </div>
     </div>
     <!-- /.row -->
