--- a/_includes/MeImg.html
+++ b/_includes/MeImg.html
@@ -1,6 +1,6 @@
 <section class="content-section" id="MeImg">
     <div class="container">
-      <div class="content-section-heading text-center">
+      <div class="col-lg-10 col-lg-offset-1 text-center">
         <h3 class="text-secondary mb-0"></h3>
         <h2 class="mb-5"></h2>
       </div>
@@ -10,7 +10,7 @@
             <div class="caption">
               <div class="caption-content">
                 <div class="h2"></div>
-                <p class="mb-0">!</p>
+                <p class="mb-0"></p>
               </div>
             </div>
             <img class="img-portfolio img-responsive" src="img/me-1.jpg">
