--- a/_includes/MeImg.html
+++ b/_includes/MeImg.html
@@ -1,54 +1,46 @@
-<section class="content-section" id="MeImg">
-    <div class="container">
+<section id="MeImg" class="MeImg">
+  <div class="container">
+    <div class="row">
       <div class="col-lg-10 col-lg-offset-1 text-center">
-        <h3 class="text-secondary mb-0"></h3>
-        <h2 class="mb-5"></h2>
+        <h2></h2>
+        <hr class="small">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="portfolio-item">
+              <a class="portfolio-item" href="#" role="button">
+                <img class="img-portfolio img-responsive" src="img/me-1.jpg">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="portfolio-item">
+              <a href="#">
+                <img class="img-portfolio img-responsive" src="img/me-2.jpg">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="portfolio-item">
+              <a href="#">
+                <img class="img-portfolio img-responsive" src="img/me-3.jpg">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="portfolio-item">
+              <a href="#">
+                <img class="img-portfolio img-responsive" src="img/me-4.jpg">
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- /.row (nested) -->
+        <a href="#" class="btn btn-dark">View More Items</a>
+        <br/><br/>
       </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2"></div>
-                <p class="mb-0"></p>
-              </div>
-            </div>
-            <img class="img-portfolio img-responsive" src="img/me-1.jpg">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2"></div>
-                <p class="mb-0"></p>
-              </div>
-            </div>
-            <img class="img-portfolio img-responsive" src="img/me-2.jpg">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2"></div>
-                <p class="mb-0"></p>
-              </div>
-            </div>
-            <img class="img-portfolio img-responsive" src="img/me-3.jpg">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2"></div>
-                <p class="mb-0"></p>
-              </div>
-            </div>
-            <img class="img-portfolio img-responsive" src="img/me-4.jpg">
-          </a>
-        </div>
-      </div>
+      <!-- /.col-lg-10 -->
     </div>
-  </section>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+</section>
