Half the links fixed

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -16,7 +16,7 @@
                 <strong>Curriculum Vitae</strong>
               </h4>
               <p>Click here for a copy of my CV.</p>
-              <a class="btn btn-light" href="https://wyattsp.github.io/AboutMePage/research/" role="button">Learn More</a>
+              <a class="btn btn-light" href="https://wyattsp.github.io/Wyatt-Petryshen/pdfs/Wyatt_Petryshen_CV_2021.pdf" role="button">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
@@ -55,7 +55,7 @@
                 <strong>Outside Academia</strong>
               </h4>
               <p>Industry driven data solutions.</p>
-              <a href="https://wyattsp.github.io/AboutMePage/outside/" role="button" class="btn btn-light">Learn More</a>
+              <a href="https://www.psgeodata.com" role="button" class="btn btn-light">Learn More</a>
             </div>
           </div>
         </div>
