--- a/_includes/people.html
+++ b/_includes/people.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h3>Check out some of my colleagues work!</h3>
-        <a href="#" class="btn btn-lg btn-dark">People</a>
+        <a href="https://twitter.com/Emiliagnathus" class="btn btn-lg btn-dark">People</a>
         <br/><br/>
       </div>
     </div>
