--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,13 +18,13 @@
         <br>
         <ul class="list-inline">
           <li>
-            href="https://www.researchgate.net/profile/{{ site.research_gate }}"><i class="fas fa-researchgate fa-fw fa-3x"></i></a>
+            <a href="https://www.researchgate.net/profile/{{ site.research_gate }}"><i class="fab fa-researchgate"></i></a>
           </li>
           <li>
             <a href="https://github.com/{{ site.github_username }}"><i class="fa fa-github fa-fw fa-3x"></i></a>
           </li>
           <li>
-            <a href="https://orcid.org/0000-0003-3894-4333"><i class="fas fa-orcid fa-fw fa-3x"></i></a>
+            <a href="https://orcid.org/0000-0003-3894-4333"><i class="fab fa-orcid"></i></a>
           </li>
         </ul>
         <hr class="small">
