--- a/_includes/researchImg.html
+++ b/_includes/researchImg.html
@@ -7,35 +7,35 @@
         <div class="row">
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a class="portfolio-item" href="#" role="button">
+              <a class="portfolio-item" href="https://wyattsp.github.io/AboutMePage/research.md" role="button">
                 <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
+              <a href="https://wyattsp.github.io/AboutMePage/research.md">
                 <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
+              <a href="https://wyattsp.github.io/AboutMePage/research.md">
                 <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
+              <a href="https://wyattsp.github.io/AboutMePage/research.md">
                 <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
               </a>
             </div>
           </div>
         </div>
         <!-- /.row (nested) -->
-        <a href="https://wyattsp.github.io/AboutMePage/research.html" class="btn btn-dark">View More Items</a>
+        <a href="https://wyattsp.github.io/AboutMePage/research.md" class="btn btn-dark">View More Items</a>
         <br/><br/>
       </div>
       <!-- /.col-lg-10 -->
