--- a/_includes/MeImg.html
+++ b/_includes/MeImg.html
@@ -7,28 +7,28 @@
         <div class="row">
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a class="portfolio-item" href="#" role="button">
+              <a class="portfolio-item" href="#!" role="button">
                 <img class="img-portfolio img-responsive" src="img/me-1.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
+              <a href="#!">
                 <img class="img-portfolio img-responsive" src="img/me-4.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
+              <a href="#!">
                 <img class="img-portfolio img-responsive" src="img/me-3.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
+              <a href="#!">
                 <img class="img-portfolio img-responsive" src="img/me-2.jpg">
               </a>
             </div>
