--- a/_includes/researchImg.html
+++ b/_includes/researchImg.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <!-- /.row (nested) -->
-        <a href="../Wyatt-Petryshen/research/" class="btn btn-dark">View More Items</a>
+        <a href="https://github.com/WyattSP/Wyatt-Petryshen/research/" class="btn btn-dark">View More Items</a>
         <br/><br/>
       </div>
       <!-- /.col-lg-10 -->
