--- a/_includes/researchImg.html
+++ b/_includes/researchImg.html
@@ -21,21 +21,21 @@
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="https://github.com/WyattSP/Wyatt-Petryshen/research/">
+              <a href="https://github.com/WyattSP/Wyatt-Petryshen/blob/master/research.html">
                 <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="https://github.com/WyattSP/Wyatt-Petryshen/research/">
+              <a href="https://github.com/WyattSP/Wyatt-Petryshen/blob/master/research.md">
                 <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
               </a>
             </div>
           </div>
         </div>
         <!-- /.row (nested) -->
-        <a href="/research.md" class="btn btn-dark">View More Items</a>
+        <a href="/research.html" class="btn btn-dark">View More Items</a>
         <br/><br/>
       </div>
       <!-- /.col-lg-10 -->
