Changes to page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-{% include header.html type="post" %}
+{% include header.html type="page" %}
 
 <div class="container" role="main">
   <div class="row">
@@ -16,3 +16,5 @@ layout: base
     </div>
   </div>
 </div>
+
+{% include researchImg.html type="page" %}
