--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,13 +20,15 @@ common-js:
   <!-- Beautiful Jekyll | MIT license | Copyright Dean Attali 2016 -->
   {% include head.html %}
 
-  <body>
+<body>
 
-    {% include navigation.html %}
+  {% include navigation.html %}
+  {% include header.html %}
 
-    {{ content }}
+  {{ content }}
 
-    {% include footer.html %}
+  {% include footer.html %}
+  {% include scripts.html %}
 
-  </body>
+</body>
 </html>
