--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-{% include header.html type="page" %}
+{% include navigationResearch.html %}
 
 <div class="container" role="main">
   <div class="row">
