Formated remaining links on home page.

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -29,7 +29,7 @@
                 <strong>Publications</strong>
               </h4>
               <p>Complete list of my publications.</p>
-              <a href="https://wyattsp.github.io/Wyatt-Petryshen/publications/" role="button" class="btn btn-light">Learn More</a>
+              <a href="/Wyatt-Petryshen/publications.html" role="button" class="btn btn-light">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
@@ -41,8 +41,8 @@
               <h4>
                 <strong>Teaching</strong>
               </h4>
-              <p>Here's what I've taught.</p>
-              <a href="https://wyattsp.github.io/Wyatt-Petryshen/cv/" role="button" class="btn btn-light">Learn More</a>
+              <p>Here's what I've taught and more.</p>
+              <a href="/Wyatt-Petryshen/teaching.html" role="button" class="btn btn-light">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
