--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -15,7 +15,7 @@
   {% include callout-1.html %}
   {% include about-me.html %}
   {% include MeImg.html %}
-  {% include people.html %}
+  {% include peopleTab.html %}
   {% include footer.html %}
   {% include scripts.html %}
 
