--- a/_includes/peopleTab.html
+++ b/_includes/peopleTab.html
@@ -1,11 +1,11 @@
-<aside class="people bg-primary">
-  <section id="people" class="people bg-primary">
+<aside class="peopleTab bg-primary">
+  <section id="peopleTab" class="peopleTab bg-primary">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h3>Check out some of my colleagues work!</h3>
         <a href="https://twitter.com/Emiliagnathus" class="btn btn-lg btn-dark">Emilia Jarochowska</a>
-        <a href="https://wyattsp.github.io/AboutMePage/people/" class="btn btn-lg btn-dark">People</a>
+        <a href="/Wyatt-Petryshen/people.html" class="btn btn-lg btn-dark">People</a>
         <br/><br/>
       </div>
     </div>
