--- a/_includes/researchImg.html
+++ b/_includes/researchImg.html
@@ -7,28 +7,28 @@
         <div class="row">
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a class="portfolio-item" href="https://github.com/WyattSP/Wyatt-Petryshen/research/" role="button">
+              <a class="portfolio-item" href="/Wyatt-Petryshen/research.html#image-1" role="button">
                 <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="https://github.com/WyattSP/Wyatt-Petryshen/research/">
+              <a href="/Wyatt-Petryshen/research.html#image-2">
                 <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="https://github.com/WyattSP/Wyatt-Petryshen/blob/master/research.html">
+              <a href="/Wyatt-Petryshen/research.html#image-3">
                 <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="https://github.com/WyattSP/Wyatt-Petryshen/blob/master/research.md">
+              <a href="/Wyatt-Petryshen/research.html#image-4">
                 <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
               </a>
             </div>
