--- a/_includes/headerAlt.html
+++ b/_includes/headerAlt.html
@@ -1,7 +1,7 @@
-<header id="top" class="headerAlt">
+<headerAlt id="top" class="headerAlt">
   <div class="text-vertical-center">
-    <h1>Wyatt Petryshen</h1>
+    <h1></h1>
     <h3></h3>
     <br>
   </div>
-</header>
+</headerAlt>
