--- a/_layouts/pagePeople.html
+++ b/_layouts/pagePeople.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-{% include header.html type="page" %}
+{% include headerAlt.html type="page" %}
 
 <div class="container" role="main">
   <div class="row">
@@ -16,5 +16,3 @@ layout: base
     </div>
   </div>
 </div>
-
-{% include researchImg.html type="page" %}
