--- a/_includes/navigationResearch.html
+++ b/_includes/navigationResearch.html
@@ -3,7 +3,7 @@
   <ul class="sidebar-nav">
     <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
     <li class="sidebar-brand">
-      <a href="#top"  onclick = $("#menu-close").click(); >Wyatt Petryshen</a>
+      <a href="https://wyattsp.github.io/Wyatt-Petryshen/"  onclick = $("#menu-close").click(); >Wyatt Petryshen</a>
     </li>
     <li>
       <a href="https://wyattsp.github.io/Wyatt-Petryshen/" onclick = $("#menu-close").click(); >Home</a>
