--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -154,7 +154,7 @@ hr.small {
     display: table;
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 95%;
     background: url("../img/IMG_1769.jpg") no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -166,8 +166,8 @@ hr.small {
     display: table;
     position: relative;
     width: 100%;
-    height: 20%;
-    background: url("../img/cover2.jpg") no-repeat center center scroll;
+    height: 15%;
+    background: url("../img/coverAlt.jpg") no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
