Trying to reformat research page images

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,9 @@
 ---
 layout: basePage
 ---
+
+{% include headerAlt.html type="page" %}
+
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -13,5 +16,3 @@ layout: basePage
     </div>
   </div>
 </div>
-
-{% include researchImg.html type="page" %}
