--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,7 +15,7 @@
       <a href="#about-me" onclick = $("#menu-close").click(); >About Me</a>
     </li>
     <li>
-      <a href="#people" onclick = $("#menu-close").click(); >People</a>
+      <a href="#peopleTab" onclick = $("#menu-close").click(); >People</a>
     </li>
     <li>
       <a href="#footer" onclick = $("#menu-close").click(); >Contact</a>
