Link name changes

--- a/_includes/researchImg.html
+++ b/_includes/researchImg.html
@@ -7,28 +7,28 @@
         <div class="row">
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a class="portfolio-item" href="/Wyatt-Petryshen/research.html#image-1" role="button">
+              <a class="portfolio-item" href="/Wyatt-Petryshen/research.html#conodont-element" role="button">
                 <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="/Wyatt-Petryshen/research.html#image-2">
+              <a href="/Wyatt-Petryshen/research.html#functional-surface">
                 <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="/Wyatt-Petryshen/research.html#image-3">
+              <a href="/Wyatt-Petryshen/research.html#fossil-plaque">
                 <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="/Wyatt-Petryshen/research.html#image-4">
+              <a href="/Wyatt-Petryshen/research.html#histological-section">
                 <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
               </a>
             </div>
