--- a/_includes/navigationResearch.html
+++ b/_includes/navigationResearch.html
@@ -12,7 +12,7 @@
       <a href="#research" onclick = $("#menu-close").click(); >Research</a>
     </li>
     <li>
-      <a href="#images-explained" onclick = $("#menu-close").click(); >Images Explained</a>
+      <a href="#conodont-element" onclick = $("#menu-close").click(); >Images Explained</a>
     </li>
     <li>
       <a href="#footer" onclick = $("#menu-close").click(); >Contact</a>
