--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,4 +30,14 @@
   {% include analytics.html %}
   {% endif %}
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-43370HYJ5Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-43370HYJ5Q');
+  </script>
+
 </head>
