--- a/_includes/peopleTab.html
+++ b/_includes/peopleTab.html
@@ -5,7 +5,7 @@
       <div class="col-lg-12 text-center">
         <h3>Check out some of my colleagues work!</h3>
         <a href="https://twitter.com/Emiliagnathus" class="btn btn-lg btn-dark">Emilia Jarochowska</a>
-        <a href="/Wyatt-Petryshen/people.html" class="btn btn-lg btn-dark">People</a>
+        <a href="/Wyatt-Petryshen/people.html" class="btn btn-lg btn-dark">More Colleagues</a>
         <br/><br/>
       </div>
     </div>
