--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1373,7 +1373,7 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #313d46;
+  background-color: #607282;
 }
 a.bg-primary:hover {
   background-color: #286090;
