--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1950,7 +1950,8 @@ pre code {
     width: 58.33333333%;
   }
   .col-md-6 {
-    width: 50%;
+    max-width: 50%;
+    max-height: 50%;
   }
   .col-md-5 {
     width: 41.66666667%;
