--- a/_includes/MeImg.html
+++ b/_includes/MeImg.html
@@ -15,21 +15,21 @@
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#!">
-                <img class="img-portfolio img-responsive" src="img/me-3.jpg">
+                <img class="img-portfolio img-responsive" src="img/img-3.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#!">
-                <img class="img-portfolio img-responsive" src="img/me-4.jpg">
+                <img class="img-portfolio img-responsive" src="img/img-4.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#!">
-                <img class="img-portfolio img-responsive" src="img/me-5.jpg">
+                <img class="img-portfolio img-responsive" src="img/img-5.jpg">
               </a>
             </div>
           </div>
