--- a/_includes/MeImg.html
+++ b/_includes/MeImg.html
@@ -8,28 +8,28 @@
           <div class="col-md-6">
             <div class="portfolio-item">
               <a class="portfolio-item" href="#!" role="button">
-                <img class="img-portfolio img-responsive" src="img/me-2.jpg">
+                <img class="img-portfolio img-responsive" src="img/me_1.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#!">
-                <img class="img-portfolio img-responsive" src="img/img-3.jpg">
+                <img class="img-portfolio img-responsive" src="img/me_2.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#!">
-                <img class="img-portfolio img-responsive" src="img/img-4.jpg">
+                <img class="img-portfolio img-responsive" src="img/me_3.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#!">
-                <img class="img-portfolio img-responsive" src="img/img-5.jpg">
+                <img class="img-portfolio img-responsive" src="img/me_4.jpg">
               </a>
             </div>
           </div>
