--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -39,9 +39,9 @@
               <i class="fa fa-compass fa-stack-1x text-primary"></i>
             </span>
               <h4>
-                <strong>Teaching</strong>
+                <strong>Active Endeavours</strong>
               </h4>
-              <p>Here's what I've taught and more.</p>
+              <p>Learn a little bit more about me.</p>
               <a href="/Wyatt-Petryshen/teaching.html" role="button" class="btn btn-light">Learn More</a>
             </div>
           </div>
@@ -52,10 +52,10 @@
               <i class="fa fa-shield fa-stack-1x text-primary"></i>
             </span>
               <h4>
-                <strong>Outside Academia</strong>
+                <strong>Wildsight</strong>
               </h4>
-              <p>Industry driven data solutions.</p>
-              <a href="https://www.psgeodata.com" role="button" class="btn btn-light">Learn More</a>
+              <p>Protecting our wild places.</p>
+              <a href="https://wildsight.ca" role="button" class="btn btn-light">Learn More</a>
             </div>
           </div>
         </div>
