--- a/_includes/research.html
+++ b/_includes/research.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>Research Overview</h2>
-        <p class="lead">My current research is focused on explaining patterns of diversity in Permian conodont populations, with my broader interests being focused on how environmental perturbations impact diversity, the effect of developmental plasticity on population dynamics, and larger scale patterns in global marine ecosystems.</p>
+        <p class="lead">I am currently involved in a broad range of projects. These span the examination of mining pollution in the Elk Valley, conodont paleobiology, and the role developmental plasticity plays in species adaptation.</p>
       </div>
     </div>
     <!-- /.row -->
