--- a/_includes/researchImg.html
+++ b/_includes/researchImg.html
@@ -15,14 +15,14 @@
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="/Wyatt-Petryshen/research.html#functional-surface">
-                <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                <img class="img-portfolio img-responsive" src="img/portfolio-GR.png">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="/Wyatt-Petryshen/research.html#fossil-plaque">
-                <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
               </a>
             </div>
           </div>
