--- a/_includes/researchImg.html
+++ b/_includes/researchImg.html
@@ -7,21 +7,21 @@
         <div class="row">
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a class="portfolio-item" href="/Wyatt-Petryshen/research.html#conodont-element" role="button">
+              <a class="portfolio-item" href="/Wyatt-Petryshen/research.html#fording-operation" role="button">
                 <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="/Wyatt-Petryshen/research.html#functional-surface">
+              <a href="/Wyatt-Petryshen/research.html#coal-elevator">
                 <img class="img-portfolio img-responsive" src="img/portfolio-GR.png">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="/Wyatt-Petryshen/research.html#fossil-plaque">
+              <a href="/Wyatt-Petryshen/research.html#functional-surface">
                 <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
               </a>
             </div>
