--- a/_includes/navigationResearch.html
+++ b/_includes/navigationResearch.html
@@ -9,10 +9,10 @@
       <a href="https://wyattsp.github.io/Wyatt-Petryshen/" onclick = $("#menu-close").click(); >Home</a>
     </li>
     <li>
-      <a href="#research" onclick = $("#menu-close").click(); >Research</a>
+      <a href="#Elk-Valley-Coal-Mining" onclick = $("#menu-close").click(); >Elk Valley Coal Mining</a>
     </li>
     <li>
-      <a href="#conodont-element" onclick = $("#menu-close").click(); >Images Explained</a>
+      <a href="#Conodont-Research" onclick = $("#menu-close").click(); >Conodont Research</a>
     </li>
     <li>
       <a href="#footer" onclick = $("#menu-close").click(); >Contact</a>
