--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3088,8 +3088,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #a1a1a1;
+  border-color: #a1a1a1;
 }
 .btn-primary:hover,
 .btn-primary:focus,
