--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -16,7 +16,7 @@
                 <strong>Curriculum Vitae</strong>
               </h4>
               <p>Click here for a copy of my CV.</p>
-              <a class="btn btn-light" href="https://wyattsp.github.io/Wyatt-Petryshen/pdfs/Oct_2021_CV.pdf" role="button">Learn More</a>
+              <a class="btn btn-light" href="https://wyattsp.github.io/Wyatt-Petryshen/pdfs/CV June 2022.pdf" role="button">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
