--- a/_includes/research.html
+++ b/_includes/research.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>Research Overview</h2>
-        <p class="lead">I am currently involved in a broad range of projects. These span the examination of mining pollution in the Elk Valley, conodont paleobiology, and the role developmental plasticity plays in species adaptation.</p>
+        <p class="lead">I am currently involved in a broad range of projects. These span the examination of mining pollution in the Elk Valley to conodont paleobiology.</p>
       </div>
     </div>
     <!-- /.row -->
