--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="top" class="header">
   <div class="text-vertical-center">
     <h1>Wyatt Petryshen</h1>
-    <h2>New Site Coming Soon</h2>
+    <h2>(New Site Coming Soon)</h2>
     <h3></h3>
     <br>
   </div>
