--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header id="top" class="header">
   <div class="text-vertical-center">
-    <h1>Wyatt Petryshen</h1>
-    <h2>(New Site Coming Soon)</h2>
-    <h3></h3>
+    <h1>Wyatt Petryshen Archived Site</h1>
+    <h2>New Site at Link Below:</h2>
+    <h3>https://wyattpetryshen.myportfolio.com/work</h3>
+    <h4></h4>
     <br>
   </div>
 </header>
