--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
 <header id="top" class="header">
   <div class="text-vertical-center">
     <h1>Wyatt Petryshen Archived Site</h1>
-    <h2>New Site at Link Below:</h2>
-    <h3>https://wyattpetryshen.myportfolio.com/work</h3>
-    <h4></h4>
+    <h2>New Site: https://wyattpetryshen.myportfolio.com/work</h2>
+    <h3></h3>
     <br>
   </div>
 </header>
